[package]
name = "uiua-js"
version = "0.1.0"
authors = ["Ernestas Kluonis <ekgame1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.76"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.70", features = [
    "Performance",
    "Window",
    "console",
] }
uiua = { path = "D:\\Dev\\uiua", default-features = false, features = [
    "batteries",
    "web",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
